tests/baselines/reference/parserInExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserInExpression1.ts(1,1): error TS2304: Cannot find name 'console'.


==== tests/cases/conformance/parser/ecmascript5/parserInExpression1.ts (1 errors) ====
    console.log("a" in { "a": true });
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.